--- a/Demo/WPFDemo/MainWindow.xaml
+++ b/Demo/WPFDemo/MainWindow.xaml
@@ -4,11 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFDemo"
+        xmlns:ManufakturaControls="clr-namespace:Manufaktura.Controls.WPF;assembly=Manufaktura.Controls.WPF"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="450" 
         Width="800">
     <Grid>
-
+        <ManufakturaControls:NoteViewer x:Name="NoteViewer"
+                                        ScoreSource="{Binding Data}"/>
     </Grid>
 </Window>
