--- a/Demo/WPFDemo/App.xaml
+++ b/Demo/WPFDemo/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="WPFDemo.App"
+﻿<Application x:Class="WpfDemo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFDemo">
+             xmlns:local="clr-namespace:WpfDemo"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
