--- a/Demo/WPFDemo/MainWindow.xaml
+++ b/Demo/WPFDemo/MainWindow.xaml
@@ -1,16 +1,12 @@
-﻿<Window x:Class="WPFDemo.MainWindow"
+﻿<Window x:Class="WpfDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFDemo"
-        xmlns:ManufakturaControls="clr-namespace:Manufaktura.Controls.WPF;assembly=Manufaktura.Controls.WPF"
+        xmlns:local="clr-namespace:WpfDemo"
         mc:Ignorable="d"
-        Title="MainWindow" 
-        Height="450" 
-        Width="800">
+        Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <ManufakturaControls:NoteViewer x:Name="NoteViewer"
-                                        ScoreSource="{Binding Data}"/>
+        
     </Grid>
 </Window>
